# Nuclei-Templates-Collection

./: .gitignore  README.md  README.txt  bulk_clone_repos.py  commands.md  pyproject.toml  remove_duplicated_templates.py
tests/: conftest.py  test_validation.py
